--- a/style.css
+++ b/style.css
@@ -9,9 +9,36 @@ html {
     color: var(--text-bg);
 }
 
+.hide {
+    color: var(--bg);
+    transition-duration: 0.4s;
+}
+
+.timer {
+    height: 300px;
+    width: 500px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: space-between;
+    transition-duration: 0.4s;
+}
+
+.timer:hover {
+    .hide {
+        color: var(--text-bg);
+        transition-duration: 0.4s;
+    }
+    .hide:hover {
+        color: var(--main);
+        transition-duration: 0.4s;
+    }
+}
+
 #time {
     font-family: 'Roboto', sans-serif;
     font-size: 150px;
+    transition-duration: 0.4s;
 }
 
 .main {
