--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --bg: #1e1e2e;
+    --bg: #11111b;
     --text-bg: #cdd6f4;
     --main: 	#89b4fa;
     --duration: 0.6s;
@@ -11,6 +11,7 @@ html {
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -78,4 +79,49 @@ a:hover {
     -webkit-user-select: none; /* Safari */
     -ms-user-select: none;     /* IE 10 and IE 11 */
     user-select: none;         /* Standard syntax */
+}
+
+#shortcutOverlay {
+    display: none; /* Hidden by default */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.shortcut-container {
+    background: #181825;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    font-size: calc(8px + 1vw);
+    max-width: 500px;
+}
+
+.shortcut-container h3 {
+    margin-top: 0;
+    text-align: center;
+    text-decoration: underline;
+}
+
+.shortcut-list {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.shortcut-list li {
+    display: flex;
+    justify-content: space-between;
+    column-gap: 50px;
+}
+
+.shortcut-key {
+    font-weight: bold;
+    color: #89b4fa;
 }
